fix(waybar): fix wrong spacing between icons

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -57,15 +57,15 @@
 #cpu,
 #memory,
 #tray,
-#clock {
+#clock,
+#custom-search,
+#idle_inhibitor {
   padding: 0.5rem 1rem;
 }
 
-#custom-search,
-#idle_inhibitor,
 #custom-power {
   padding: 0.5rem;
-  padding-left: 1rem;
+  padding-left: 1.2rem;
 }
 
 #custom-music,
